--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ android:
     - tools
 
       # The BuildTools version used by your project
-    - build-tools-25.0.0
+    - build-tools-25.0.2
     - build-tools-25.0.1
 
     # The SDK version used to compile your project
@@ -34,7 +34,9 @@ script:
 #  - ./gradlew testDebugUnitTest
 #  - ./gradlew createDebugCoverageReport coveralls
 #  - ./gradlew connectedAndroidTest coveralls
-  
+
+notifications:
+  slack: saicheng-team:8X56hkcIDcoanC5B2sNxPHdZ
   
 jdk:
  - oraclejdk8
