--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -35,11 +35,11 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    compile "com.github.Qixingchen:Android-Base-Utils:V1.0.0"
+    compile "com.github.Qixingchen:Android-Base-Utils:4b5a2c5230"
 
     //RxJava
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxjava:1.3.0'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.8.0@aar'
     //RxBinding
     compile "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
