--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ apply plugin: "com.vanniktech.android.junit.jacoco"
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1'
-        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.6.0'
+        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.9.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +20,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com' }
+        google()
     }
 }
 
@@ -28,8 +29,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    supportLibraryVersion = '25.4.0'
+    supportLibraryVersion = '27.1.1'
+    sdk_version = 27
     rx_binding_version = '0.4.0'
-    sdk_version = 25
-    buildToolsVersion = "25.0.3"
+    rx2_binding_version = '2.1.1'
 }
