--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'jacoco'
 
 android {
     compileSdkVersion rootProject.ext.sdk_version
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 16
@@ -29,24 +28,24 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
-    compile "com.github.Qixingchen:Android-Base-Utils:V1.0.7"
+    implementation "com.github.Qixingchen:Android-Base-Utils:V1.1.2"
 
     //RxJava
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.3.0'
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.8.0@aar'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.8'
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
     //RxBinding
-    compile "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
-    compile "com.jakewharton.rxbinding:rxbinding-support-v4:$rx_binding_version"
-    compile "com.jakewharton.rxbinding:rxbinding-appcompat-v7:$rx_binding_version"
-    compile "com.jakewharton.rxbinding:rxbinding-design:$rx_binding_version"
-    compile "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:$rx_binding_version"
+    implementation "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
+    implementation "com.jakewharton.rxbinding:rxbinding-support-v4:$rx_binding_version"
+    implementation "com.jakewharton.rxbinding:rxbinding-appcompat-v7:$rx_binding_version"
+    implementation "com.jakewharton.rxbinding:rxbinding-design:$rx_binding_version"
+    implementation "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:$rx_binding_version"
 }
 // build a jar with source files
 task sourcesJar(type: Jar) {
