--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,15 @@ android:
     - tools
 
       # The BuildTools version used by your project
-    - build-tools-25.0.3
+    - build-tools-27.0.3
 
     # The SDK version used to compile your project
-    - android-25
+    - android-27
 
     # Additional components
     - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-25
+#    - addon-google_apis-google-25
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
