--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,6 +25,16 @@ android {
             abortOnError false
         }
     }
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { details ->
+                // Force all of the primary support libraries to use the same version.
+                if (details.requested.group == 'com.android.support' && details.requested.name != 'multidex') {
+                    details.useVersion supportLibraryVersion
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -39,7 +49,8 @@ dependencies {
     //RxJava
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.8'
-    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    //noinspection GradleDependency
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.8.2@aar'
     //RxBinding
     implementation "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
     implementation "com.jakewharton.rxbinding:rxbinding-support-v4:$rx_binding_version"
