--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -47,16 +47,16 @@ dependencies {
     implementation "com.github.Qixingchen:Android-Base-Utils:V1.1.2"
 
     //RxJava
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.8'
+    api 'io.reactivex:rxandroid:1.2.1'
+    api 'io.reactivex:rxjava:1.3.8'
     //noinspection GradleDependency
-    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.8.2@aar'
+    api 'com.tbruyelle.rxpermissions:rxpermissions:0.8.2@aar'
     //RxBinding
-    implementation "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding:rxbinding-support-v4:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding:rxbinding-appcompat-v7:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding:rxbinding-design:$rx_binding_version"
-    implementation "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:$rx_binding_version"
+    api "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
+    api "com.jakewharton.rxbinding:rxbinding-support-v4:$rx_binding_version"
+    api "com.jakewharton.rxbinding:rxbinding-appcompat-v7:$rx_binding_version"
+    api "com.jakewharton.rxbinding:rxbinding-design:$rx_binding_version"
+    api "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:$rx_binding_version"
 }
 // build a jar with source files
 task sourcesJar(type: Jar) {
