--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     })
     testImplementation 'junit:junit:4.12'
 
-    implementation "com.github.Qixingchen:Android-Base-Utils:V1.1.2"
+    api "com.github.Qixingchen:Android-Base-Utils:V1.1.2"
 
     //RxJava
     api 'io.reactivex:rxandroid:1.2.1'
