--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -67,7 +67,7 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
                 groupId = 'com.github.qixingchen'
-                artifactId = 'Rx-Utils:lib'
+                artifactId = 'Rx-Utils-lib'
                 version = '2.1'
             }
         }
