--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         jcenter()
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
@@ -19,6 +20,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         google()
+        maven { url "https://jitpack.io" }
     }
 }
 
