--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     api 'io.reactivex:rxandroid:1.2.1'
     api 'io.reactivex:rxjava:1.3.8'
     //noinspection GradleDependency
-    api 'com.tbruyelle.rxpermissions:rxpermissions:0.8.2@aar'
+    api 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0'
     //RxBinding
     api "com.jakewharton.rxbinding:rxbinding:$rx_binding_version"
     api "com.jakewharton.rxbinding:rxbinding-support-v4:$rx_binding_version"
